# nigel

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
deploy/: audio-setup.sh  cloudflare-tunnel.sh  install.sh  mcp.json.example  picrawler-mcp.service  picrawler-tunnel.service  picrawler-voice.env.example  picrawler-voice.service  uninstall.sh
docs/: local-test.md  pi-setup.md  public-mcp.md
scripts/: smoke.py
src/mcp_picrawler/: __init__.py  agent_inbox.py  audio_input.py  auth.py  hardware.py  memory_store.py  server.py  vision.py
src/voice_agent/: __init__.py  agent.py  audio.py  mcp_bridge.py  text_runner.py
tests/: conftest.py  test_agent_events.py  test_agent_inbox.py  test_audio.py  test_audio_input.py  test_auth.py  test_hardware_mock.py  test_mcp_bridge.py  test_mcp_server_e2e.py  test_memory_store.py  test_real_hardware_contract.py  test_realtime_live.py  test_vision.py  test_voice_agent_mode.py  test_webcam_mock.py
