[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-picrawler"
version = "0.1.0"
description = "MCP server that gives Claude a body on a SunFounder PiCrawler"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Guy" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pillow>=10.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    # openai client is used by the listen/wake-word MCP tools for Whisper
    # transcription. The separate voice_agent package adds Realtime on top.
    "openai>=1.50",
]

[project.optional-dependencies]
# picrawler/robot-hat/vilib are NOT on PyPI in any useful state — picrawler
# isn't published at all, vilib only has an ancient v1.0.0 stub, and we need
# the `picamera2` branch of vilib specifically. They're installed globally
# on the Pi via bootstrap.sh (sudo python3 setup.py install) and the service
# venv sees them through `--system-site-packages`. Do NOT list them here.
vision = [
    "ultralytics>=8.2",
]
caption = [
    # Moondream2's HF remote code subclasses transformers' modelling
    # internals. Transformers 4.48 added `all_tied_weights_keys` on
    # PreTrainedModel which Moondream's HfMoondream class doesn't expose,
    # so generation() crashes with AttributeError. Pin the compatible
    # range. When Moondream2 updates, widen this.
    "transformers>=4.44,<4.48",
    "torch>=2.2",
    "accelerate>=0.30,<1.0",
    "einops>=0.7",
    "timm>=0.9",
]
voice = [
    "openai>=1.50",
    "sounddevice>=0.4.6",
    "websockets>=12",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
mcp-picrawler = "mcp_picrawler.__main__:main"
picrawler-voice = "voice_agent.agent:main"
picrawler-text = "voice_agent.text_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_picrawler", "src/voice_agent"]

# Include the top-level scripts/ package so `python -m scripts.smoke` works
# from an installed venv as well as a dev checkout.
[tool.hatch.build.targets.wheel.sources]
"scripts" = "scripts"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # mcp SDK is nudging us toward streamable_http_client (different signature).
    # Suppress until we migrate — see voice_agent/mcp_bridge.py comment.
    "ignore:Use `streamable_http_client` instead.:DeprecationWarning",
]
